syntax = "proto3";

package xyz_grpc;
option go_package = "./;pb";

import "google/protobuf/empty.proto";

message Consumer {
    uint64 id = 1;
    string nik = 2;
    string fullname = 3;
    string legal_name = 4;
    string birth_place = 5;
    string birth_date = 6;
    uint64 salary = 7;
    string ktp = 8;
    string selfie_photo = 9;
    string created_at = 10;
    string updated_at = 11;
}

message ConsumerListResponse {
    uint32 code = 1;
    string message = 2;
    repeated Consumer consumers = 3;
}

message ConsumerIdRequest {
    uint64 id = 1;
}

message ConsumerResponse {
    uint32 code = 1;
    string message = 2;
    Consumer consumer = 3;
}

message ConsumerCreateRequest {
    string nik = 1;
    string fullname = 2;
    string legal_name = 3;
    string birth_place = 4;
    string birth_date = 5;
    uint64 salary = 6;
    bytes ktp = 7;
    bytes selfie_photo = 8;
}

message NoDataResponse {
    uint32 code = 1;
    string message = 2;
}

service ConsumerService {
    rpc GetAllConsumers(google.protobuf.Empty) returns (ConsumerListResponse);
    rpc GetConsumerById(ConsumerIdRequest) returns (ConsumerResponse);
    rpc CreateConsumer(ConsumerCreateRequest) returns (ConsumerResponse);
    rpc UpdateConsumer(Consumer) returns (ConsumerResponse);
    rpc DeleteConsumer(ConsumerIdRequest) returns (NoDataResponse);
}